--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
-
 body {
     font-family: 'Poppins', sans-serif;
     padding:0px;
@@ -23,7 +21,7 @@ body {
     animation: rotate 0.56s infinite linear;
     width:50px;
     height:50px;
-    border:12px solid rgb(21, 144, 254);
+    border:12px solid rgb(255, 44, 90);
     border-bottom:12px solid #fff;
     border-radius:50%;
     margin:0;
@@ -82,8 +80,7 @@ header table {
 }
 #logo {
     font-size:24px;
-    background-color: white;
-    color:rgb(24, 82, 190);
+    color:rgb(255, 44, 90);
 }
 #navigation {
     text-align:right;
@@ -106,7 +103,6 @@ header table {
 #top_part tr td{
     width:50%;
 }
-
 #about {
     width:84% !important;
     height:95vh;
@@ -129,7 +125,7 @@ header table {
     text-align:left;
 }
 .social {
-    color:rgb(21, 144, 254);
+    color:rgb(255, 44, 90);
     font-size:23px;
     padding:12px 17px;
     border-radius:50%;
@@ -141,15 +137,15 @@ header table {
 .social:hover { 
     cursor: pointer;
     color:#fff;
-    background:rgb(21, 144, 254);
-    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
+    background:rgb(255, 44, 90);
+    box-shadow:0px 10px 30px rgba(255, 66, 107,0.8);
 }
 .btn_one {
     font-size:18px;
     font-family: 'Poppins', sans-serif;
-    color:rgb(21, 144, 254);
+    color:rgb(255, 44, 90);
     background:#fff;
-    border:3px solid rgba(21, 144, 254);
+    border:3px solid rgb(255, 44, 90);
     padding:8px 40px;
     width:35%;
     border-radius:80px;
@@ -158,15 +154,15 @@ header table {
     transition:0.4s ease-in-out;
 }
 .btn_one:hover {
-    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
+    box-shadow:0px 10px 30px rgba(255, 44, 90, 0.8);
     cursor:pointer;
     color:#fff;
     background:rgb(255, 44, 90);
 }
 #rightImage {
-    width:50%;
-    height:60vh;
-    background:linear-gradient(0deg,rgba(21, 144, 254, 0.8),rgba(0, 51, 102, 0.8)),url("https://i.imgur.com/ZoFQ8J2.jpg") center center;
+    width:100%;
+    height:95vh;
+    background:linear-gradient(0deg,rgba(255, 44, 90, 0.8),rgba(2255, 44, 90, 0.8)),url("https://images.unsplash.com/photo-1506057527569-6a0285b2fcc1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=60") center center;
     background-size:cover;
     background-repeat:no-repeat;
 }
@@ -177,21 +173,26 @@ header table {
 }
 #work h1 {
     padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
-    width:8%;
+    border-bottom:4px solid rgb(255, 44, 90);
+    width:6%;
 }
-
-#abi {
-    width:92vw;
-    padding:6vh 4vw;
-    font-weight:bold;
+#photos {
+    width:100%;
+    columns:3;
+    column-gap:4%;
+    z-index:1;
+    transition:0.4s ease-in-out;
 }
-#abi h1 {
-    padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
-    width:10%;
+#photos img {
+    width:100%;
+    height:auto;
+    margin:4.5% 0px;
+    transition:0.4s ease-in-out;
 }
-
+#photos img:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
 #bio {
     width:92vw;
     padding:6vh 4vw;
@@ -199,7 +200,7 @@ header table {
 }
 #bio h1 {
     padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
+    border-bottom:4px solid rgb(255, 44, 90);
     width:8%;
 }
 #contact {
@@ -208,7 +209,7 @@ header table {
 }
 #contact h1 {
     padding:5px 0px;
-    border-bottom:4px solid rgb(20, 144, 254);
+    border-bottom:4px solid rgb(255, 44, 90);
     width:10%;
 }
 #contact table {
@@ -234,7 +235,7 @@ header table {
     margin:20px 1%;
     background:transparent;
     border:0px;
-    border-bottom:3px solid rgba(21, 144, 254, 0.8);
+    border-bottom:3px solid rgba(255, 44, 90,0.5);
     padding:8px 10px;
     font-family: 'Poppins', sans-serif;
     font-size:18px;
@@ -247,7 +248,7 @@ header table {
     margin:20px 1%;
     padding:8px 10px;
     border:0px;
-    border-bottom:3px solid rgba(21, 144, 254, 0.8);
+    border-bottom:3px solid rgba(255, 44, 90,0.5);
     padding:8px 10px;
     font-family: 'Poppins', sans-serif;
     font-size:18px;
@@ -259,11 +260,11 @@ header table {
 }
 #contact form input:focus {
     outline:none;
-    border-bottom:3px solid rgba(21, 144, 254);
+    border-bottom:3px solid rgba(255, 44, 90,1);
 }
 #contact form textarea:focus {
     outline:none;
-    border-bottom:3px solid rgba(21, 144, 254));
+    border-bottom:3px solid rgba(255, 44, 90,1);
 }
 #address {
     position:relative;
@@ -277,7 +278,7 @@ header table {
     font-weight:bold;
 }
 #footer a {
-    color:rgb(20, 144, 254);
+    color:rgb(255, 44, 90);
     text-decoration:none;
 }
 ::placeholder {
@@ -340,12 +341,12 @@ button:focus {
     padding:6px 30px;
     width:60%;
     margin:4vh auto;
-    box-shadow:0px 10px 20px rgba(21, 144, 254, 0.8);
-    background:rgb(20, 144, 254);
+    box-shadow:0px 10px 20px rgba(255, 44, 90, 0.8);
+    background:rgb(255, 44, 90);
     color:#fff;
     }
     .btn_one:hover {
-        box-shadow:0px 10px 40px rgba(21, 144, 254, 0.8);
+        box-shadow:0px 10px 40px rgba(255, 44, 90, 0.8);
         cursor:pointer;
     }
     #contact table tr td {
