--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+
 body {
     font-family: 'Poppins', sans-serif;
     padding:0px;
@@ -21,7 +23,7 @@ body {
     animation: rotate 0.56s infinite linear;
     width:50px;
     height:50px;
-    border:12px solid rgb(255, 44, 90);
+    border:12px solid rgb(21, 144, 254);
     border-bottom:12px solid #fff;
     border-radius:50%;
     margin:0;
@@ -68,7 +70,7 @@ header table {
     transition:0.4s ease-in-out;
 }
 #magnify h1:hover{
-    color:rgb(255, 44, 90);
+    color:rgb(21, 144, 254);
     cursor:pointer;
 }
 #img_here {
@@ -80,7 +82,8 @@ header table {
 }
 #logo {
     font-size:24px;
-    color:rgb(255, 44, 90);
+    background-color: white;
+    color:rgb(24, 82, 190);
 }
 #navigation {
     text-align:right;
@@ -125,7 +128,7 @@ header table {
     text-align:left;
 }
 .social {
-    color:rgb(255, 44, 90);
+    color:rgb(21, 144, 254);
     font-size:23px;
     padding:12px 17px;
     border-radius:50%;
@@ -137,15 +140,15 @@ header table {
 .social:hover { 
     cursor: pointer;
     color:#fff;
-    background:rgb(255, 44, 90);
-    box-shadow:0px 10px 30px rgba(255, 66, 107,0.8);
+    background:rgb(21, 144, 254);
+    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
 }
 .btn_one {
     font-size:18px;
     font-family: 'Poppins', sans-serif;
-    color:rgb(255, 44, 90);
+    color:rgb(21, 144, 254);
     background:#fff;
-    border:3px solid rgb(255, 44, 90);
+    border:3px solid rgba(21, 144, 254);
     padding:8px 40px;
     width:35%;
     border-radius:80px;
@@ -154,15 +157,15 @@ header table {
     transition:0.4s ease-in-out;
 }
 .btn_one:hover {
-    box-shadow:0px 10px 30px rgba(255, 44, 90, 0.8);
+    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
     cursor:pointer;
     color:#fff;
-    background:rgb(255, 44, 90);
+    background:rgba(21, 144, 254);
 }
 #rightImage {
-    width:100%;
-    height:95vh;
-    background:linear-gradient(0deg,rgba(255, 44, 90, 0.8),rgba(2255, 44, 90, 0.8)),url("https://images.unsplash.com/photo-1506057527569-6a0285b2fcc1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=60") center center;
+    width:50%;
+    height:60vh;
+    background:linear-gradient(0deg,rgba(21, 144, 254, 0.8),rgba(0, 51, 102, 0.8)),url("https://i.imgur.com/ZoFQ8J2.jpg") center center;
     background-size:cover;
     background-repeat:no-repeat;
 }
@@ -173,26 +176,21 @@ header table {
 }
 #work h1 {
     padding:5px 0px;
-    border-bottom:4px solid rgb(255, 44, 90);
-    width:6%;
+    border-bottom:4px solid rgb(20, 144, 254);
+    width:8%;
 }
-#photos {
-    width:100%;
-    columns:3;
-    column-gap:4%;
-    z-index:1;
-    transition:0.4s ease-in-out;
+
+#abi {
+    width:92vw;
+    padding:6vh 4vw;
+    font-weight:bold;
 }
-#photos img {
-    width:100%;
-    height:auto;
-    margin:4.5% 0px;
-    transition:0.4s ease-in-out;
+#abi h1 {
+    padding:5px 0px;
+    border-bottom:4px solid rgb(20, 144, 254);
+    width:10%;
 }
-#photos img:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-}
+
 #bio {
     width:92vw;
     padding:6vh 4vw;
@@ -200,7 +198,7 @@ header table {
 }
 #bio h1 {
     padding:5px 0px;
-    border-bottom:4px solid rgb(255, 44, 90);
+    border-bottom:4px solid rgb(20, 144, 254);
     width:8%;
 }
 #contact {
@@ -209,7 +207,7 @@ header table {
 }
 #contact h1 {
     padding:5px 0px;
-    border-bottom:4px solid rgb(255, 44, 90);
+    border-bottom:4px solid rgb(20, 144, 254);
     width:10%;
 }
 #contact table {
@@ -235,7 +233,7 @@ header table {
     margin:20px 1%;
     background:transparent;
     border:0px;
-    border-bottom:3px solid rgba(255, 44, 90,0.5);
+    border-bottom:3px solid rgba(21, 144, 254, 0.8);
     padding:8px 10px;
     font-family: 'Poppins', sans-serif;
     font-size:18px;
@@ -248,7 +246,7 @@ header table {
     margin:20px 1%;
     padding:8px 10px;
     border:0px;
-    border-bottom:3px solid rgba(255, 44, 90,0.5);
+    border-bottom:3px solid rgba(21, 144, 254, 0.8);
     padding:8px 10px;
     font-family: 'Poppins', sans-serif;
     font-size:18px;
@@ -260,11 +258,11 @@ header table {
 }
 #contact form input:focus {
     outline:none;
-    border-bottom:3px solid rgba(255, 44, 90,1);
+    border-bottom:3px solid rgba(21, 144, 254);
 }
 #contact form textarea:focus {
     outline:none;
-    border-bottom:3px solid rgba(255, 44, 90,1);
+    border-bottom:3px solid rgba(21, 144, 254));
 }
 #address {
     position:relative;
@@ -278,7 +276,7 @@ header table {
     font-weight:bold;
 }
 #footer a {
-    color:rgb(255, 44, 90);
+    color:rgb(20, 144, 254);
     text-decoration:none;
 }
 ::placeholder {
@@ -341,12 +339,12 @@ button:focus {
     padding:6px 30px;
     width:60%;
     margin:4vh auto;
-    box-shadow:0px 10px 20px rgba(255, 44, 90, 0.8);
-    background:rgb(255, 44, 90);
+    box-shadow:0px 10px 20px rgba(21, 144, 254, 0.8);
+    background:rgb(20, 144, 254);
     color:#fff;
     }
     .btn_one:hover {
-        box-shadow:0px 10px 40px rgba(255, 44, 90, 0.8);
+        box-shadow:0px 10px 40px rgba(21, 144, 254, 0.8);
         cursor:pointer;
     }
     #contact table tr td {
