--- a/index.css
+++ b/index.css
@@ -165,7 +165,7 @@ header table {
 #rightImage {
     width:50%;
     height:60vh;
-    background:linear-gradient(0deg,rgba(21, 144, 254, 0.8),rgba(0, 51, 102, 0.8)),url("https://i.imgur.com/ZoFQ8J2.jpg") center center;
+    background:linear-gradient(0deg,rgba(21, 144, 254, 0.8),rgba(0, 51, 102, 0.8)),url("https://img.onl/7hkTpV") center center;
     background-size:cover;
     background-repeat:no-repeat;
 }
