--- a/index.css
+++ b/index.css
@@ -215,7 +215,7 @@ header table {
     width:50px;
     height:50px;
     color:#fff;
-    background:#33b5e5;
+    background:rgb(20, 144, 254);
     line-height:50px;
     border-radius:50%;
     transition:all 0.5s;
@@ -223,7 +223,7 @@ header table {
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
 #gotop :hover{
-    background:#0099CC;
+    background: rgb(20, 144, 254);
 }
 
 #contact {
