--- a/index.css
+++ b/index.css
@@ -213,18 +213,20 @@ header table {
     right:30px;
     bottom:20px;
     display:none;
-    width:50px;
-    height:50px;
+    width:45px;
+    height:45px;
     color:#fff;
+    opacity: 0.6;
     background:rgb(20, 144, 254);
     line-height:50px;
     border-radius:50%;
-    transition:all 0.5s;
+    transition:all 2s;
     text-align: center;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
 }
 #gotop :hover{
     background: rgb(20, 144, 254);
+    opacity: 1 ;
 }
 
 #contact {
