--- a/index.css
+++ b/index.css
@@ -204,7 +204,7 @@ header table {
 #bio h1 {
     padding:5px 0px;
     border-bottom:4px solid rgb(20, 144, 254);
-    width:8%;
+    width:85px;
 }
 
 #gotop {
