--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Noto Sans TC', sans-serif;
     padding:0px;
     margin:0px;
     max-width:100vw;
@@ -151,7 +151,7 @@ header table {
 }
 .btn_one {
     font-size:18px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Noto Sans TC', sans-serif;
     color:rgb(21, 144, 254);
     background:#fff;
     border:3px solid rgba(21, 144, 254);
@@ -200,6 +200,7 @@ header table {
     width:92vw;
     padding:6vh 4vw;
     font-weight:bold;
+    font-family: 'Noto Sans TC', sans-serif;
 }
 #bio h1 {
     padding:5px 0px;
@@ -228,7 +229,6 @@ header table {
     background: rgb(20, 144, 254);
     opacity: 1 ;
 }
-
 #contact {
     width:92vw;
     padding:6vh 4vw;
@@ -263,7 +263,7 @@ header table {
     border:0px;
     border-bottom:3px solid rgba(21, 144, 254, 0.8);
     padding:8px 10px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Noto Sans TC', sans-serif;
     font-size:18px;
     transition:0.4s ease-in-out;
     color:#000;
@@ -276,7 +276,7 @@ header table {
     border:0px;
     border-bottom:3px solid rgba(21, 144, 254, 0.8);
     padding:8px 10px;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Noto Sans TC', sans-serif;
     font-size:18px;
     background:transparent;
     resize:none;
