--- a/index.css
+++ b/index.css
@@ -1,81 +1,452 @@
-var width = $(window).width();
-window.onscroll = function(){
-if ((width >= 1000)){
-    if(document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
-        $("#header").css("background","#fff");
-        $("#header").css("color","#000");
-        $("#header").css("box-shadow","0px 0px 20px rgba(0,0,0,0.09)");
-        $("#header").css("padding","4vh 4vw");
-        $("#navigation a").hover(function(){
-            $(this).css("border-bottom","2px solid rgb(255, 44, 90)");
-        },function(){
-            $(this).css("border-bottom","2px solid transparent");
-        });
-    }else{
-        $("#header").css("background","transparent");
-        $("#header").css("color","#fff");
-        $("#header").css("box-shadow","0px 0px 0px rgba(0,0,0,0)");
-        $("#header").css("padding","6vh 4vw");
-        $("#navigation a").hover(function(){
-            $(this).css("border-bottom","2px solid #fff");
-        },function(){
-            $(this).css("border-bottom","2px solid transparent");
-        });
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
+
+body {
+    font-family: 'Noto Sans TC', sans-serif;
+    padding:0px;
+    margin:0px;
+    max-width:100vw;
+    overflow-x:hidden;
+    scroll-behavior: smooth;
+}
+#loading {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    background: white;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+#spinner {
+    animation: rotate 0.56s infinite linear;
+    width:50px;
+    height:50px;
+    border:12px solid rgb(21, 144, 254);
+    border-bottom:12px solid #fff;
+    border-radius:50%;
+    margin:0;
+}
+@keyframes rotate {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
+header {
+    width:92vw;
+    padding:6vh 4vw;
+    position:fixed;
+    font-weight:bold;
+    background:transparent;
+    color:#fff;
+    transition:0.4s ease-in-out;
+    z-index:2;
+}
+header table {
+    width:100%;
+}
+#logo {
+    width:20%;
+}
+#navigation {
+    width:80%;
+}
+#magnify {
+    width:100vw;
+    height:100vh;
+    background:rgba(0, 0, 0, 0.92);
+    position:fixed;
+    z-index:4;
+    display:none;
+    flex-direction: column;
+    justify-content:center;
+}
+#magnify h1 {
+    position:absolute;
+    top:0;
+    right:0;
+    margin:20px 40px;
+    color:#fff;
+    transition:0.4s ease-in-out;
+}
+#magnify h1:hover{
+    color:rgb(21, 144, 254);
+    cursor:pointer;
+}
+#img_here {
+    width:90%;
+    height:90%;
+    background-size:contain !important;
+    background-repeat:no-repeat !important;
+    margin:0px auto;
+}
+#logo {
+    font-size:24px;
+    background-color: white;
+    color:rgb(24, 82, 190);
+}
+#navigation {
+    text-align:right;
+}
+#navigation a {
+    color:inherit;
+    text-decoration:none;
+    padding:5px 10px;
+    border-bottom:2px solid transparent;
+    margin-left:4vw;
+    transition:0.4s ease-in-out;
+}
+#navigation a:hover{
+    border-bottom:2px solid #fff;
+}
+#top_part {
+    width:100%;
+    border:2vh solid #fff;
+}
+#top_part tr td{
+    width:50%;
+}
+#about {
+    width:84% !important;
+    height:95vh;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    text-align:left;
+    padding:0px 8%;
+}
+#about h1 {
+    font-size:45px;
+    margin-bottom:0;padding-bottom:0
+    word-wrap:break-word;
+}
+#about table {
+    width:70%;
+    margin-top:4vh;
+}
+#about table tr td {
+    width:20% !important;
+    text-align:left;
+}
+#description {
+    font-size:18px;
+    background-color: white;
+    color:rgb(128, 128, 128);
+}
+.social {
+    color:rgb(21, 144, 254);
+    font-size:23px;
+    padding:12px 18px;
+    border-radius:50%;
+    background:transparent;
+    transition:0.4s ease-in-out;
+    font-weight:bold;
+    margin:0px 8px;
+}
+.social:hover { 
+    cursor: pointer;
+    padding:12px 18px;
+    color:#fff;
+    background:rgb(21, 144, 254);
+    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
+}
+#social_apple {
+    color:rgb(21, 144, 254);
+    font-size:23px;
+    padding:9px 17px;
+    border-radius:50%;
+    background:transparent;
+    transition:0.4s ease-in-out;
+    font-weight:bold;
+    margin:0px 8px;
+}
+#social_apple:hover { 
+    cursor: pointer;
+    padding:9px 17px;
+    color:#fff;
+    background:rgb(21, 144, 254);
+    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
+}
+#social_twitter {
+    color:rgb(21, 144, 254);
+    font-size:23px;
+    padding:12px 17px;
+    border-radius:50%;
+    background:transparent;
+    transition:0.4s ease-in-out;
+    font-weight:bold;
+    margin:0px 8px;
+}
+#social_twitter:hover { 
+    cursor: pointer;
+    padding:12px 17px;
+    color:#fff;
+    background:rgb(21, 144, 254);
+    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
+}
+.btn_one {
+    font-size:18px;
+    font-family: 'Noto Sans TC', sans-serif;
+    color:rgb(21, 144, 254);
+    background:#fff;
+    border:3px solid rgba(21, 144, 254);
+    padding:8px 40px;
+    width:35%;
+    border-radius:80px;
+    font-weight:bold;
+    margin:2vh 0px;
+    transition:0.4s ease-in-out;
+}
+.btn_one:hover {
+    box-shadow:0px 10px 30px rgba(21, 144, 254,0.8);
+    cursor:pointer;
+    color:#fff;
+    background:rgba(21, 144, 254);
+}
+.line{
+    line-height: 28px;
+}
+#rightImage {
+    width:50%;
+    height:60vh;
+    background:linear-gradient(0deg,rgba(21, 144, 254, 0.8),rgba(0, 51, 102, 0.8)),url("https://img.onl/7hkTpV") center center;
+    background-size:cover;
+    background-repeat:no-repeat;
+}
+#work {
+    width:92vw;
+    padding:6vh 4vw;
+    font-weight:bold;
+}
+#work h1 {
+    padding:5px 0px;
+    border-bottom:4px solid rgb(20, 144, 254);
+    width:85px;
+}
+
+#skill {
+    width:92vw;
+    padding:6vh 4vw;
+    font-weight:bold;
+}
+#skill h1 {
+    padding:5px 0px;
+    border-bottom:4px solid rgb(20, 144, 254);
+    width: 85px;
+}
+#bio {
+    width:92vw;
+    padding:6vh 4vw;
+    font-weight:bold;
+    font-family: 'Noto Sans TC', sans-serif;
+}
+#bio h1 {
+    padding:5px 0px;
+    border-bottom:4px solid rgb(20, 144, 254);
+    width:85px;
+}
+
+#gotop {
+    position:fixed;
+    z-index:90;
+    right:30px;
+    bottom:20px;
+    display:none;
+    width:45px;
+    height:45px;
+    color:#fff;
+    opacity: 0.8;
+    background:rgb(20, 144, 254);
+    line-height:45px;
+    border-radius:50%;
+    transition:all 2s;
+    text-align: center;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
+#gotop :hover{
+    background: rgb(20, 144, 254);
+    opacity: 1 ;
+}
+#contact {
+    width:92vw;
+    padding:6vh 4vw;
+}
+#contact h1 {
+    padding:5px 0px;
+    border-bottom:4px solid rgb(20, 144, 254);
+    width:10%;
+}
+#contact table {
+    width:100%;
+}
+#contact table tr td {
+    width:50%;
+}
+#inner_div table{
+    width:100%;
+}
+#inner_div table tr td{
+    font-weight:bold;
+}
+#inner_table tr td{
+    padding:10px 20px !important;
+}
+#contact form {
+    width:100%;
+}
+#contact form input {
+    width:96%;
+    margin:20px 1%;
+    background:transparent;
+    border:0px;
+    border-bottom:3px solid rgba(21, 144, 254, 0.8);
+    padding:8px 10px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-size:18px;
+    transition:0.4s ease-in-out;
+    color:#000;
+    font-weight:bold;
+}
+#contact form textarea {
+    width:96%;
+    margin:20px 1%;
+    padding:8px 10px;
+    border:0px;
+    border-bottom:3px solid rgba(21, 144, 254, 0.8);
+    padding:8px 10px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-size:18px;
+    background:transparent;
+    resize:none;
+    transition:0.4s ease-in-out;
+    color:#000;
+    font-weight:bold;
+}
+#contact form input:focus {
+    outline:none;
+    border-bottom:3px solid rgba(21, 144, 254);
+}
+#contact form textarea:focus {
+    outline:none;
+    border-bottom:3px solid rgba(21, 144, 254));
+}
+#address {
+    position:relative;
+    top:-25px;
+    left:30px;
+}
+#footer {
+    width:100%;
+    padding:10vh 0px;
+    text-align:center;
+    font-weight:bold;
+}
+#footer a {
+    color:rgb(20, 144, 254);
+    text-decoration:none;
+}
+::placeholder {
+    color:#000;
+}
+button:focus {
+    outline:none;
+}
+::-webkit-scrollbar {
+    width:5px;
+    height:5px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+::-webkit-scrollbar-thumb {
+    background: rgb(0, 0, 0); 
+}
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0,0.8); 
+}
+
+@media (max-width: 1000px){
+    #photos {
+    columns:1;
+    column-gap:0%;
     }
-}
-}
-
-function magnify(imglink){
-    $("#img_here").css("background",`url('${imglink}') center center`);
-    $("#magnify").css("display","flex");
-    $("#magnify").addClass("animated fadeIn");
-    setTimeout(function(){
-        $("#magnify").removeClass("animated fadeIn");
-    },800);
-}
-
-function closemagnify(){
-    $("#magnify").addClass("animated fadeOut");
-    setTimeout(function(){
-        $("#magnify").css("display","none");
-        $("#magnify").removeClass("animated fadeOut");
-        $("#img_here").css("background",`url('') center center`);
-    },800);
-}
-
-setTimeout(function(){
-    $("#loading").addClass("animated fadeOut");
-    setTimeout(function(){
-      $("#loading").removeClass("animated fadeOut");
-      $("#loading").css("display","none");
-    },800);
-},1650);
-
-$(function() {
-    $('#gotop').click(function(){
-        $('html,body').animate({ scrollTop: 0 }, 'slow'); 
-        return false;
-    });
-    $(window).scroll(function() {
-        if ( $(this).scrollTop() > 1000){
-            $('#gotop').fadeIn(1000);
-        } else {
-            $('#gotop').fadeOut(500);
-        }
-    });
-});
-
-$(document).ready(function(){
-    $("a").on('click', function(event) {
-      if (this.hash !== "") {
-        event.preventDefault();
-        var hash = this.hash;
-        $('body,html').animate({
-        scrollTop: $(hash).offset().top
-        }, 1800, function(){
-        window.location.hash = hash;
-       });
-       } 
-      });
-  });
-  
+    #photos img {
+        margin:2% 0px;
+    }
+    #photos img:hover {
+        transform: scale(1);
+        cursor: pointer;
+    }
+    #rightImage {
+        display:none;
+    }
+    #top_part {
+        border:0px;
+    }
+    #top_part tr td{
+        width:100%;
+        text-align:center;
+    }
+    #about {
+        width:92% !important;
+        height:75vh;
+        padding-top:20vh !important;
+        text-align:center;
+        padding:0px 4%;
+    }
+    #about table {
+        width:100%;
+        margin-top:6vh;
+    }
+    #about table tr td {
+        text-align:center;
+    }
+    .btn_one {
+    padding:6px 30px;
+    width:60%;
+    margin:4vh auto;
+    box-shadow:0px 10px 20px rgba(21, 144, 254, 0.8);
+    background:rgb(20, 144, 254);
+    color:#fff;
+    }
+    .btn_one:hover {
+        box-shadow:0px 10px 40px rgba(21, 144, 254, 0.8);
+        cursor:pointer;
+    }
+    #contact table tr td {
+        width:100%;
+        display:block;
+    }
+    #inner_table tr td{
+        padding:10px 0px !important;
+    }
+    #contact form input {
+        width:90%;
+    }
+    #contact form textarea {
+        width:90%;
+    }
+    #work h1 {
+        width:19%;
+    }
+    #bio h1 {
+        width:25%;
+    }
+    #contact h1 {
+        width:33%;
+    }
+    header {
+        width:96vw;
+        background:#fff;
+        padding:4vh 2vw;
+        position:absolute;
+    }
+    #header table tr td {
+        width:100%;
+        display:block;
+        text-align:center;
+        padding:15px 0px;
+    }
+    #navigation a {
+        color:#000;
+    }
