--- a/index.css
+++ b/index.css
@@ -50,9 +50,9 @@ a:link {
     color: #1590fe;
     text-decoration:none;
 }
-a:visited {
-    color: gray;
-    text-decoration:none;
+a:hover {
+    color: #003366;
+    text-decoration:underline;
 }
 a:active {
     color: #1590fe;
