--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400:500&display=swap');
 
 body {
     font-family: 'Noto Sans TC', sans-serif;
+    font-weight:300;
     padding:0px;
     margin:0px;
     max-width:100vw;
@@ -119,6 +120,11 @@ a:active {
 #top_part tr td{
     width:50%;
 }
+.pf_content{
+    font-weight:300;
+    line-height: 28px;
+    max-width: 80%;
+}
 #about {
     width:84% !important;
     height:95vh;
@@ -131,7 +137,13 @@ a:active {
 #about h1 {
     font-size:40px;
     margin-bottom:0;padding-bottom:0
-    word-wrap:break-word;
+    word-wrap : break-word;
+}
+#about h2{
+    font-weight: 400;
+}
+.about_ul{
+    font-weight: 300;
 }
 #about table {
     width:70%;
@@ -142,6 +154,7 @@ a:active {
     text-align:left;
 }
 #description {
+    font-weight: 400;
     font-size:18px;
     background-color: white;
     color:rgb(128, 128, 128);
@@ -222,20 +235,21 @@ a:active {
     padding-right:10%;
 }
 .bio_content{
+    font-weight:300;
     line-height: 28px;
-    max-width: 70%;
+    max-width: 80%;
 }
 #rightImage {
     width:50%;
     height:60vh;
-    background:linear-gradient(0deg,rgba(21, 144, 254, 0.8),rgba(0, 51, 102, 0.8)),url("https://img.onl/7hkTpV") center center;
+    background-image: url("https://img.onl/7hkTpV");
     background-size:cover;
     background-repeat:no-repeat;
 }
 #work {
     width:92vw;
     padding:6vh 4vw;
-    font-weight:bold;
+    font-weight:400;
 }
 #work h1 {
     padding:5px 0px;
