--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400:500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500&display=swap');
 
 body {
     font-family: 'Noto Sans TC', sans-serif;
-    font-weight:300;
+    font-weight:400;
     padding:0px;
     margin:0px;
     max-width:100vw;
@@ -121,7 +121,7 @@ a:active {
     width:50%;
 }
 .pf_content{
-    font-weight:300;
+    font-weight:400;
     line-height: 28px;
     max-width: 80%;
 }
@@ -137,13 +137,13 @@ a:active {
 #about h1 {
     font-size:40px;
     margin-bottom:0;padding-bottom:0
-    word-wrap : break-word;
+    word-wrap: break-word;
 }
 #about h2{
     font-weight: 400;
 }
 .about_ul{
-    font-weight: 300;
+    font-weight: 400;
 }
 #about table {
     width:70%;
@@ -235,7 +235,7 @@ a:active {
     padding-right:10%;
 }
 .bio_content{
-    font-weight:300;
+    font-weight:400;
     line-height: 28px;
     max-width: 80%;
 }
