--- a/index.css
+++ b/index.css
@@ -15,6 +15,18 @@ body {
 a {
   color:#fff;
 }
+a:hover {
+  color:#e04556;
+}
+ul {
+  font-size: 17.5px;
+  line-height:28px;
+  }
+ol{
+  font-size: 17.5px;
+    line-height:28px;
+
+}
 
 #loading {
   width: 100vw;
@@ -169,7 +181,7 @@ a {
 }
 
 #blog p {
-  font-size: 17px;
+  font-size: 17.5px;
   line-height: 30px;
   word-spacing: 1.2px;
   margin: 5vh 0px;
@@ -537,6 +549,7 @@ a {
   #blog p {
     margin: 7vh 0px;
     line-height: 30px;
+    font-size: 17.5px;
   }
 }
 
